# ph-disaster-monitor

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
src/ph_disaster_monitor/: __init__.py  __main__.py
tests/: __init__.py  test_core.py
