[project]
name = "ph-disaster-monitor"
version = "1.0.0"
description = "Real-time disaster & hazard monitoring for the Philippines. Polls USGS, GDACS, and ReliefWeb."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[project.scripts]
ph-disaster-monitor = "ph_disaster_monitor:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
